--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@
 .pink-theme {
    --primary-color: #E85382;
 }
-
+.blue-theme {
+   --primary-color:#39BADF;
+}
+.yellow-theme {
+   --primary-color: #E1A725;
+}
 
 body {
    font-family: 'GeneralSans-Variable';
